# blog

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.example.yaml  init-test-db.example.sql  pyproject.toml
alembic/: env.py
alembic/versions/: bf38c2015cc2_initial_migrations.py
app/: main.py
app/api/: comment.py  post.py  router.py
app/core/: config.py  database.py  deps.py
app/crud/: comment.py  post.py
app/models/: __init__.py  comment.py  post.py
app/schemas/: comment.py  post.py
tests/: conftest.py
