[project]
name = "blog"
version = "0.1.3"
description = "Простой Blog API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.50",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.14",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 88
indent-width = 4

target-version = "py313"

# exclude = [
#     "alembic",
# ]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "ASYNC", "RUF"]

ignore = ["E501"]

fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[tool.taskipy.tasks]
lint = "uv run ruff format . && uv run ruff check . --fix && uv run mypy ."
